css: do not underline links in browse_content

--- a/ui/bo.css
+++ b/ui/bo.css
@@ -400,6 +400,14 @@ table.new-resource-thumb {
   text-decoration: none;
 }
 
+#browse-list td a {
+  text-decoration: none;
+}
+
+#browse-list td a:hover {
+  text-decoration: underline;
+}
+
 /**************************************************************************
  * NUMERIC BATCH
  **************************************************************************/
