Beautiful header icons (IE7 eol)

--- a/ui/aruni/style.css
+++ b/ui/aruni/style.css
@@ -79,7 +79,7 @@ div#page {
 }
 
 #header #links-menu-login {
-  background-image: url("../icons/16x16/lock.png");
+  background-image: url("../icons/16x16/signin.png");
 }
 
 #header #links-menu-profile {
