calendar: display "Created by ${owner}" on event edit.

--- a/calendar/ui/style.css
+++ b/calendar/ui/style.css
@@ -268,3 +268,10 @@ table.timetable {
   text-decoration: none;
   color: #003180;
 }
+
+/**************************************************************************
+ * edit_event
+ **************************************************************************/
+p#event-owner {
+  margin-top: 0;
+}
