comments: Add new class CommentsAware
Blog, Tracker Issue inherit this new class.
Split CommentsView get_namespace, add new get_item_value method like in
BrowseFolder_View
Improve a little bit the comments look&feel.

--- a/ui/aruni/style.css
+++ b/ui/aruni/style.css
@@ -231,12 +231,21 @@ div#page {
 
 
 /**************************************************************************
- * ui/commnets.xml.en
+ * ui/comments.xml.en
  *************************************************************************/
 
 .comment-header {
   background-color: #ddddff;
   font-weight: bold;
+}
+
+.comment-header .comment-datetime {
+  margin-left: 15px;
+}
+
+.comment-header .comment-number,
+.comment-header .comment-reply {
+  margin-right: 5px;
 }
 
 .comment-body {
