--- a/ui/bo.css
+++ b/ui/bo.css
@@ -332,9 +332,14 @@ span.field-error {
 
 table.new-resource-thumb {
   float: left;
-  width: 18em;
+  width: 16em;
   height: 6em;
-  margin-right: 1em;
+  margin-right: 0.7em;
+}
+
+table.new-resource-thumb p {
+  margin: 0px;
+  font-size: 0.95em;
 }
 
 /**************************************************************************
