--- a/calendar/ui/style.css
+++ b/calendar/ui/style.css
@@ -1,42 +1,75 @@
-
 /* Selector */
 
 #cal-selector {
-  margin: 5px 0px 10px 0px;
+  margin: 0;
+  margin-bottom: 10px;
   border-bottom: 1px solid #0467BA;
+  padding: 5px 0;
 }
 
-#cal-selector ul {
-  list-style:none;
-  display:inline;
-}
-
-#cal-selector li {
-  display: inline;
-  padding: 0 26px;
-  font-size:18px;
-}
-
-#cal-selector li a {
-  text-decoration:none;
-  color: #7ACA2A;
-}
-
-#cal-selector a.goto-monthly,
-#cal-selector a.goto-weekly,
-#cal-selector a.goto-daily,
-#cal-selector a.goto-today {
-  background: transparent url("../../ui/aruni/images/sprite_calendar.png") no-repeat;
-  float: left;
-  width: 16px;
+#cal-selector #mini-cal-button{
+  display:block;
+  background: url('/ui/icons/16x16/calendar.png');
   height: 16px;
+  width: 16px;
 }
-#cal-selector a.goto-monthly { background-position: 0 1px; }
-#cal-selector a.goto-weekly {background-position: 0 -15px; }
-#cal-selector a.goto-daily {background-position: 0 -31px; }
-#cal-selector a.goto-today {
-  background-position: 0 -47px;
-  margin-right: 10px;
+
+#cal-selector ul{
+  height: 20px;
+  list-style: none;
+  margin: 0 15px;
+  padding: 0;
+  text-align: center;
+}
+
+#cal-selector li{
+  display: block;
+  float: left;
+  margin: 0;
+  padding: 0;
+  height: 20px;
+}
+
+#cal-selector li:first-child a{
+  border-radius: 3px 0 0 3px;
+}
+
+#cal-selector li a{
+  background-color: #F4F4F4;
+  border-left: 1px solid #666666;
+  border-top: 1px solid #666666;
+  border-bottom: 1px solid #666666;
+  border-right: 0;
+  color: #666666;
+  margin: 0;
+  padding: 2px 15px;
+  height: 16px;
+  text-decoration:none;
+}
+
+#cal-selector li:last-child a{
+  border-right: 1px solid #666666;
+  border-radius: 0 3px 3px 0;
+}
+
+#cal-selector li a.enabled{
+  background-color: #D0D0D0;
+  color: #000;
+}
+
+#cal-selector #cal-selector-today-link li a{
+  border-radius: 3px;
+}
+
+#cal-selector #attributes,
+#cal-selector-today-link,
+#cal-selector-navigation-links,
+#cal-selector-title{
+  float: left;
+}
+
+#cal-selector-view-links{
+  float: right;
 }
 
 /* ******** */
@@ -206,10 +239,6 @@ table.timetable {
 /**************************************************************************
  * daily_view
  **************************************************************************/
-#cal-selector #attributes {
-  display: inline;
-}
-
 #cal-daily-view #attributes span {
   margin: 0 8px 0 0;
 }
