--- a/ui/bo.css
+++ b/ui/bo.css
@@ -414,6 +414,17 @@ table.new-resource-thumb p {
   text-decoration: underline;
 }
 
+div.block-widget-text,
+div.block-widget-format,
+div.block-widget-group,
+div.block-widget-permission,
+div.block-widget-search_state,
+div.block-widget-search_parent_paths
+{
+  float: left;
+  margin-right: 0.5em;
+}
+
 /**************************************************************************
  * NUMERIC BATCH
  **************************************************************************/
