access: allow to define path-depth on access rules

--- a/ui/bo.css
+++ b/ui/bo.css
@@ -418,13 +418,21 @@ form#form-search div.block-widget-text,
 form#form-search div.block-widget-format,
 form#form-search div.block-widget-group,
 form#form-search div.block-widget-permission,
-form#form-search div.block-widget-search_parent_paths,
+form#form-search div.block-widget-search_path,
 form#form-search div.block-widget-search_format,
 form#form-search div.block-widget-search_state
 {
   float: left;
   margin-right: 0.5em;
 }
+
+form.autoform div.block-widget-search_path,
+form.autoform div.block-widget-search_path_depth
+{
+  float: left;
+  margin-right: 1em;
+}
+
 
 /**************************************************************************
  * NUMERIC BATCH
