--- a/ui/bo.css
+++ b/ui/bo.css
@@ -169,7 +169,7 @@ button {
  * ui/aruni/location.xml.en
  *************************************************************************/
 
-#location {
+div#location {
   margin: 0px 10px 0px 0px;
   padding: 0px 0px 4px 8px;
   width: 99%;
