css: fix syntax error

--- a/ui/bo.css
+++ b/ui/bo.css
@@ -419,7 +419,7 @@ form#form-search div.block-widget-format,
 form#form-search div.block-widget-group,
 form#form-search div.block-widget-permission,
 form#form-search div.block-widget-search_path,
-form#form-search div.block-widget-search_format,
+form#form-search div.block-widget-search_format
 {
   float: left;
   margin-right: 0.5em;
