--- a/ui/tiny_mce/themes/advanced/skins/default/dialog.css
+++ b/ui/tiny_mce/themes/advanced/skins/default/dialog.css
@@ -50,7 +50,15 @@ float:left;
 
 /* Browse */
 a.pickcolor, a.browse {text-decoration:none}
-a.browse span {display:block; width:20px; height:18px; background:url(../../img/icons.gif) -860px 0; border:1px solid #FFF; margin-left:1px;}
+a.browse span {display:block; width:20px; height:18px; background:url(../../img/icons.gif) -860px 0; border:1px solid #FFF; margin-left:1px;
+  /* ------------------- */
+  /* ikaaro */
+  line-height: 18px;
+  padding-left: 22px;
+  text-transform: capitalize;
+  width: auto;
+  /* ------------------- */
+}
 .mceOldBoxModel a.browse span {width:22px; height:20px;}
 a.browse:hover span {border:1px solid #0A246A; background-color:#B2BBD0;}
 a.browse span.disabled {border:1px solid white; opacity:0.3; -ms-filter:'alpha(opacity=30)'; filter:alpha(opacity=30)}
